# cpr--g

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  commands.md  docker-compose.yml  test_file.txt
client/: CMakeLists.txt  file_upload_client.cpp  file_upload_client.h  main.cpp
proto/: file_upload.proto
server/: CMakeLists.txt  file_upload_service.cpp  file_upload_service.h  main.cpp
